# stm32h7-embassy-channel

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
