[package]
name = "stm32h7-udp-calculation"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h743zi", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["tick-hz-32_768"] }
embedded-alloc = "0.5.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.7.1"
heapless = { version = "0.8.0", default-features = false }
panic-probe = "0.3.2"
rand_core = "0.6.4"
static_cell = "2.1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
